
7.2
        - added "tabbed" extension that provides a crude tabbed terminal.
        - added "readline" extension that allows cursor positioning
          via mouse clicks.
	- now it is possible to insert the value of the CLIPBOARD selection
	  with shift - mouse button 2
        - fixed the automove-background extension to ignore coordinates
          in non-synthetic events.
	- removed support for obsolete offix dnd protocol.

7.1  Thu Jan 19 20:25:34 CET 2006
        - setuid/setgid operation is now _encouraged_: security has been
          improved by moving privileged operations into a separate process
          and permanently dropping privileges within the terminal. This
          makes it possible to remove security checks from the perl code
          and gives a much safer feeling when urxvt needs to run with
          special privileges.
        - perl taint checking disabled, as urxvt no longer runs setuid/setgid
          itself.
        - new perl extension automove-background that can be used to get
          the same effect as pseudo-transparency with any pixmap.
        - new perl extension example: perl/selection-pastebin, can be used to
          e.g. upload the selection to a webserver and generate a url, or
          similar stuff.
	- use the scrollback buffer even when the scroll region doesn't
          span the whole screen, as long as it starts at row 0. Helps
          for programs displaying a status line at the bottom.
	- selection popup now shows selection in dec/hex/oct.
        - perl/selection: matching on unicode characters in the selection
          code was O(n²), which equals infinity in some degenerate cases
          :-> Matching is now done on UTF-8, which makes it almost instant.
        - perl/selection, perl/selection-autotransform: regexes are now
          being interpreted in the locale urxvt was started.
        - implemented override-redirect option and enabled it on menus,